# ecommerce_risk

./: README.md  deploy.sh  docker-compose.yaml  pyproject.toml  测试用例.md  电商风控项目实战需求.md
backend/: .env  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run_tests.py
backend/app/: main.py
backend/app/api/: ai_rule_api.py  assessment_api.py  auth_api.py  blacklist_api.py  case_api.py  dashboard_api.py  deps.py  profile_api.py  risk_check_api.py  rule_api.py  system_api.py
backend/app/core/: config.py  database.py  errors.py  logger.py  response.py  security.py
backend/app/models/: blacklist.py  feature_snapshot.py  review_log.py  risk_assessment.py  risk_case.py  risk_event.py  risk_rule.py  rule_hit.py  system.py
backend/app/repositories/: assessment_repo.py  blacklist_repo.py  case_repo.py  feature_snapshot_repo.py  review_log_repo.py  risk_event_repo.py  rule_hit_repo.py  rule_repo.py
backend/app/schemas/: ai_rule.py  assessment.py  auth.py  blacklist.py  case.py  common.py  dashboard.py  profile.py  risk_check.py  rule.py  system.py
backend/app/services/: ai_rule_service.py  auth_service.py  blacklist_service.py  case_service.py  dashboard_service.py  decision_service.py  effective_risk_service.py  feature_service.py  profile_service.py  risk_check_service.py  rule_engine.py  rule_service.py  system_service.py
backend/sql/: ecommerce_risk_schema.sql  ecommerce_risk_seed_data.sql
backend/tests/: README.md  __init__.py  conftest.py  test_acceptance.py  test_ai_rule_service.py  test_decision_priority.py
frontend/: README.md  (+5 more)
(+39 files in other folders)
