[project]
name = "ecommerce-risk-control-backend"
version = "0.1.0"
description = "FastAPI backend for the ecommerce risk control system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "SQLAlchemy==2.0.36",
    "PyMySQL==1.1.1",
    "cryptography>=42.0.0",
    "python-dotenv==1.0.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
